# unistudent

./: .coveragerc  .isort.cfg  Makefile  README.md  pyproject.toml  tox.ini
testauth/settings/: local.py
unistudent/: __init__.py  admin.py  apps.py  auth_hooks.py  models.py  providers.py  tasks.py  urls.py  views.py
unistudent/migrations/: 0001_initial.py
unistudent/templates/unistudent/: base.html  index.html
unistudent/tests/: test_example.py
